# libtest-mimic

./: Cargo.toml  README.md  flake.nix
.github/workflows/: dep_check.yml  release.yml
examples/: simple.rs  tidy.rs
src/: lib.rs  printer.rs
tests/: all_passing.rs  json-output.json  main_thread.rs  mixed_bag.rs  panic.rs  threads.rs
tests/common/: mod.rs
