[package]
name = "libtest-with"
version = "0.8.1-0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>", "Antonio Yang <yanganto>"]
edition = "2021"
rust-version = "1.65"

description = """
A slightly customized version of libtest-mimic,
such that it can be easier create a test runner for test-with
"""
documentation = "https://docs.rs/libtest-with"
repository = "https://github.com/yanganto/libtest-with"
license = "MIT/Apache-2.0"
keywords = ["libtest", "test", "built-in", "framework", "harness"]
categories = ["development-tools::testing", "development-tools::build-utils"]
readme = "README.md"

exclude = [".github"]

[dependencies]
clap = { version = "4.0.8", features = ["derive"] }
escape8259 = "0.5.2"
anstream = "0.6.14"
anstyle = "1.0.7"

[dev-dependencies]
fastrand = "2.0.0"
pretty_assertions = "1.2.1"
