[package]
name = "libtest-with"
version = "0.7.0-2"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>", "Antonio Yang <yanganto>"]
edition = "2021"
rust-version = "1.71.0"

description = """
A slightly customized version of libtest-mimic,
such that it can be easier create a test runner for test-with
"""
documentation = "https://docs.rs/libtest-with"
repository = "https://github.com/yanganto/libtest-with"
license = "MIT/Apache-2.0"
keywords = ["libtest", "test", "built-in", "framework", "harness"]
categories = ["development-tools::testing", "development-tools::build-utils"]
readme = "README.md"

exclude = [".github"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
threadpool = "1.8.1"
termcolor = "1.4"
escape8259 = "0.5.2"

reqwest = { version = "0.11", features = ["blocking"], optional = true }
ping = { version = "0.5", optional = true }
sysinfo = { version = "0.30", optional = true }
byte-unit = { version = "5.1", optional = true }
num_cpus = { version = "1.16", optional = true }
which = { version = "6.0", optional = true }
chrono = { version = "0.4", optional = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
users = { version = "0.11", optional = true }

[dev-dependencies]
fastrand = "2.0.1"
pretty_assertions = "1.4"

[features]
default = []

net = ["http", "icmp"]
http = ["reqwest"]
icmp = ["ping"]

resource = ["sysinfo", "byte-unit", "num_cpus"]
user = ["users"]
executable = ["which"]

timezone = ["chrono"]
